--- a/Telas da Dashboard/tela-info1.html
+++ b/Telas da Dashboard/tela-info1.html
@@ -55,7 +55,7 @@
                     <div class="blocoInterno">
                         <div class="cardInt2">
                             <h1>6/10</h1>
-                            <h4 >Salas com registros fora do Ideal</h4>
+                            <h4>Salas com registros fora do Ideal</h4>
                         </div>
                     </div>
                 </div>
@@ -74,20 +74,26 @@
                     <div class="listasTU">
                         <h3>Condição de Temperatura e Umidade nas salas</h3>
                         <div class="scroll">
-                        <button style="color: red;" onclick="mudar1()"><b style="color: black;" >1 - </b>Sala das Leis
-                            Brasileiras </button>
-                        <button style="color: red;" onclick="mudar3()"><b style="color: black;">3 - </b> Sala da história
-                            dos
-                            sobrenomes</button>
-                        <button style="color: red;" onclick="mudar5()"><b style="color: black;">5 - </b> Sala de Figuras Importantes no
-                            Brasil</button>
-                        <button style="color: red;" onclick="mudar6()"><b style="color: black;">6 - </b> Sala da história da música
-                            Brasileira</button>
-                        <button style="color: red;" onclick="mudar8()"><b style="color: black;">8 - </b> Sala de exposição de documentos
-                            de
-                            arte</button>
-                        <button style="color: red;" onclick="mudar9()"><b style="color: black;">9 - </b> Sala de documentação da TV
-                            Brasileira</button>
+                            <button style="color: red;" onclick="mudar1()"><b style="color: black;">1 - </b>Sala das
+                                Leis
+                                Brasileiras </button>
+                            <button style="color: red;" onclick="mudar3()"><b style="color: black;">3 - </b> Sala da
+                                história
+                                dos
+                                sobrenomes</button>
+                            <button style="color: red;" onclick="mudar5()"><b style="color: black;">5 - </b> Sala de
+                                Figuras Importantes no
+                                Brasil</button>
+                            <button style="color: red;" onclick="mudar6()"><b style="color: black;">6 - </b> Sala da
+                                história da música
+                                Brasileira</button>
+                            <button style="color: red;" onclick="mudar8()"><b style="color: black;">8 - </b> Sala de
+                                exposição de documentos
+                                de
+                                arte</button>
+                            <button style="color: red;" onclick="mudar9()"><b style="color: black;">9 - </b> Sala de
+                                documentação da TV
+                                Brasileira</button>
                         </div>
                     </div>
                     <div class="linha"></div>
