arrumei a mensagem de erro do cadastro e login

--- a/cadastro-cerejo/cadastro.html
+++ b/cadastro-cerejo/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Cadastro | HDP</title>
     <link rel="stylesheet" href="style-cadastro.css">
 </head>
 
@@ -35,7 +35,7 @@
                 <button onclick="cadastrar()">Cadastrar</button>
                 <button onclick="window.location.reload()">Limpar</button>
             </div>
-            
+
             <div id="div_mensagem"></div>
         </div>
     </div>
@@ -74,35 +74,39 @@
             div_mensagem.innerHTML = ` `;
 
             if (indiceArrobaSenha < 0 && indiceCifraoSenha < 0 && indiceComercialSenha < 0 && indiceHashtagSenha < 0) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 1 caractere especial entre essas opções: (@ - # - $ - &))</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 1 caractere especial entre essas opções: (@ - # - $ - &))</span><br><br>`;
                 fazerCadastro = false;
             }
             if (cpfTamanho != 11) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - CPF inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - CPF inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
                 fazerCadastro = false;
             }
             if (telefoneTamanho != 11) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Telefone inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Telefone inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
                 fazerCadastro = false;
             }
             if (senha != senhaConfirm) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Senha e senha de confirmação diferentes! Tente novamente</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Senha e senha de confirmação diferentes! Tente novamente</span><br><br>`;
                 fazerCadastro = false;
             }
             if (tamanhoSenha < 5 || tamanhoSenha > 15) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 5 caracteres e no máximo 15 caracteres)</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 5 caracteres e no máximo 15 caracteres)</span><br><br>`;
                 fazerCadastro = false;
             }
             if (indiceArrobaEmail < 0 || terminaComPontoCom == false) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Email inválido, tente novamente! (o email precisa ter "@" e ".com")</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Email inválido, tente novamente! (o email precisa ter "@" e ".com")</span><br><br>`;
                 fazerCadastro = false;
             }
             if (caixaBaixaEmpresa != "museu do ipiranga") {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Empresa inválida! Essa empresa não está cadastrada em nosso sistema!</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Empresa inválida! Essa empresa não está cadastrada em nosso sistema!</span><br><br>`;
                 fazerCadastro = false;
             }
             if (codEmpresa != 1) {
-                div_mensagem.innerHTML += `<span style="color: red;"> - Empresa inválida! Código de segurança errado!</span><br><br>`;
+                div_mensagem.innerHTML = `<span style="color: red;"> - Empresa inválida! Código de segurança errado!</span><br><br>`;
+                fazerCadastro = false;
+            }
+            if (nome == " " || cpf == " " || telefone == " " || email == " " || senha == " " || senhaConfirm == " " || nomeEmpresa == 0 || codEmpresa == " ") {
+                div_mensagem.innerHTML = `<span style="color: red;"> - Todos os campos tem que estar preenchidos!</span><br><br>`;
                 fazerCadastro = false;
             }
 
