--- a/Telas da Dashboard/index.html
+++ b/Telas da Dashboard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Dashboard | HDP</title>
 
     <link rel="stylesheet" href="style-Inicial.css">
 </head>
