--- a/Telas da Dashboard/tela-info1.html
+++ b/Telas da Dashboard/tela-info1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações Dashboard</title>
+    <title>Informações Dashboard | HDP</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style-Inicial.css">
 </head>
