--- a/Telas da Dashboard/tela-info2.html
+++ b/Telas da Dashboard/tela-info2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações Dashboard</title>
+    <title>Informações Dashboard | HDP</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style-Inicial.css">
 </head>
@@ -40,7 +40,7 @@
                     <p>fernando.brandao@sptech.school</p>
                 </div>
                 <div class="acesso">
-                    <h3>HOME</h>
+                    <h3>HOME</h3>
                         <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
                 </div>
             </div>
