--- a/calculadora-financeira-HDP/index.html
+++ b/calculadora-financeira-HDP/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora HDP</title>
+    <title>Calculadora | HDP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,6 @@
         <ul class="navbar">
             <li>Home</li>
             <li>Sobre Nós</li>
-            <li>Contato</li>
             <li>|</li>
             <li>Cadastro</li>
             <li>Login</li>
