adicionei navbar login

--- a/cadastro-cerejo/cadastro.html
+++ b/cadastro-cerejo/cadastro.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <img src="download.png" alt="logo">
+        <img src="Captura_de_tela_de_2024-04-18_14-29-53-removebg-preview.png" alt="logo">
         <ul class="navbar">
             <li>Home</li>
             <li>Sobre Nós</li>
