--- a/cadastro-cerejo/login-cerejo.html
+++ b/cadastro-cerejo/login-cerejo.html
@@ -9,13 +9,25 @@
 </head>
 
 <body>
-    <div class="login">
-        <h2>Login</h2>
-        <input type="text" id="ipt_user" placeholder="Usuário">
-        <input type="password" id="ipt_senha" placeholder="Senha"><br>
-        <button id="botao" onclick="autenticar()">Login</button><br><br>
-        <div id="div_mensagem"></div>
-        <div id="div_tentativa"></div>
+    <div class="header">
+        <img src="Captura_de_tela_de_2024-04-18_14-29-53-removebg-preview.png" alt="logo">
+        <ul class="navbar">
+            <li>Home</li>
+            <li>Sobre Nós</li>
+            <li>|</li>
+            <li>Cadastro</li>
+            <li>Login</li>
+        </ul>
+    </div>
+    <div class="container">
+        <div class="login">
+            <h2>Login</h2>
+            <input type="text" id="ipt_user" placeholder="Usuário">
+            <input type="password" id="ipt_senha" placeholder="Senha"><br>
+            <button id="botao" onclick="autenticar()">Login</button><br><br>
+            <div id="div_mensagem"></div>
+            <div id="div_tentativa"></div>
+        </div>
     </div>
 </body>
 
@@ -27,13 +39,13 @@
         var user = ipt_user.value;
         var senha = ipt_senha.value;
 
-        if(user == 'FernandoBrandao' && senha == 'sprint2'){
+        if (user == 'FernandoBrandao' && senha == 'sprint2') {
             div_mensagem.innerHTML = `Autenticação bem-sucedida!`;
             div_tentativa.innerHTML = ``;
             tentativas = 3;
         } else {
             tentativas--;
-            if (tentativas <= 0){
+            if (tentativas <= 0) {
                 div_mensagem.innerHTML = ``;
                 div_tentativa.innerHTML = `Falha de autenticação: Usuário BLOQUEADO temporariamente!`;
                 document.getElementById("botao").disabled = true;
