--- a/cadastro-patroni/Site_PatroniAtt1.html
+++ b/cadastro-patroni/Site_PatroniAtt1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historical Document Preservation</title>
+  <title>Document</title>
   <link rel="stylesheet" href="styleinstitucionalAtt1.css">
 </head>
 <body>
@@ -11,18 +11,18 @@
     <img src="Captura_de_tela_de_2024-04-18_14-29-53-removebg-preview.png" alt="" style="width: 120px;"> 
       <div class="container">
             <ul class="navbar">
-                <a href="#home"><li>Inicio</li></a>
+                <li>Inicio</li>
                 <a href="#sobre"><li>Sobre Nós</li></a>
                 <li>|</li>
-                <a href=""><l1>Cadastro</l1></a>
-                <a href=""><li>Login</li></a>
+                <l1>Cadastro</l1> 
+                <li>Login</li>
             </ul>
         </div>
     </div>
   
         <div class="logo"> 
         <div class="texto1"> 
-          <p><b id="home" >HDP</b></p>
+          <p><b>HDP</b></p>
           <p><b>Historical Document</b></p>
           <p><b>Preservation</b></p>
        </div>
@@ -108,11 +108,9 @@
           que a HDP pode oferecer. Com dados precisos e 
           análises detalhadas, ajudamos você a tomar decisões 
           informadas para proteger seu valioso acervo.</p>
-          <a href="">
           <div class="teste4">
             <p class="texto6">Ir para a calculadora</p>
           </div>
-        </a>
         </div>
   </div>
   
@@ -120,4 +118,5 @@
 
 
 </html>
+
 
