--- a/cadastro-patroni/Site_PatroniAtt1.html
+++ b/cadastro-patroni/Site_PatroniAtt1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Historical Document Preservation</title>
   <link rel="stylesheet" href="styleinstitucionalAtt1.css">
 </head>
 <body>
