novas propriedades da dasboard

--- a/Telas da Dashboard/index.html
+++ b/Telas da Dashboard/index.html
@@ -32,7 +32,7 @@
                 <div class="foto">
                 </div>
                 <div class="informacoes">
-                    <h5>FERNANDO BRANDÃO</h5>
+                    <h5>Olá, Fernando Brandão</h5>
                     <p>fernando.brandao@sptech.school</p>
                 </div>
                 <div class="acesso">
