adicionei gráficos da sala 3 e 5

--- a/Telas da Dashboard/tela-info1.html
+++ b/Telas da Dashboard/tela-info1.html
@@ -76,14 +76,14 @@
                         <div class="scroll">
                             <button style="color: red;" onclick="mudar1()"><b style="color: black;">1 - </b>Sala das
                                 Leis
-                                Brasileiras </button>
+                                Brasileiras (Sensor 1) </button>
                             <button style="color: red;" onclick="mudar3()"><b style="color: black;">3 - </b> Sala da
                                 história
                                 dos
                                 sobrenomes</button>
                             <button style="color: red;" onclick="mudar5()"><b style="color: black;">5 - </b> Sala de
                                 Figuras Importantes no
-                                Brasil</button>
+                                Brasil (Sensor 2) </button>
                             <button style="color: red;" onclick="mudar6()"><b style="color: black;">6 - </b> Sala da
                                 história da música
                                 Brasileira</button>
@@ -100,7 +100,7 @@
 
                     <div id="grafico1" style="text-align: center;">
                         <h3>Métricas na Sala 1 - Sala das Leis
-                            Brasileiras </h3>
+                            Brasileiras (S1) </h3>
                         <div class="grafico">
                             <canvas id="graficoSala1"></canvas>
                         </div>
@@ -116,7 +116,7 @@
 
                     <div id="grafico5" style="text-align: center;">
                         <h3>Métricas na Sala 5 - Sala de Figuras Importantes no
-                            Brasil </h3>
+                            Brasil (S2) </h3>
                         <div class="grafico">
                             <canvas id="graficoSala5"></canvas>
                         </div>
