--- a/Telas da Dashboard/tela-info2.html
+++ b/Telas da Dashboard/tela-info2.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="acesso">
                     <h3>HOME</h3>
-                        <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
+                    <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
                 </div>
             </div>
         </div>
@@ -81,13 +81,13 @@
                                 história
                                 dos
                                 sobrenomes</button>
-                            <button style="color: red;" onclick="mudar5()"><b style="color: black;">5 - </b> Sala de
+                            <button style="color: red;" onclick="mudar5G()"><b style="color: black;">5 - </b> Sala de
                                 Figuras Importantes no
-                                Brasil</button>
-                            <button style="color: red;" onclick="mudar6()"><b style="color: black;">6 - </b> Sala da
+                                Brasil (Sensor 2)</button>
+                            <button style="color: red;" onclick="mudar6G()"><b style="color: black;">6 - </b> Sala da
                                 história da música
                                 Brasileira</button>
-                            <button style="color: red;" onclick="mudar9()"><b style="color: black;">9 - </b> Sala de
+                            <button style="color: red;" onclick="mudar9G()"><b style="color: black;">9 - </b> Sala de
                                 documentação da TV
                                 Brasileira</button>
                         </div>
@@ -96,21 +96,23 @@
 
                     <div id="grafico" style="text-align: center;">
                         <h3>Percentual de Salas com registros Inadequados</h3>
-                        <div class="grafico" style="    justify-content: center;
+                        <div class="grafico" style="justify-content: center;
                         ">
                             <canvas id="graficoSalas" position=relative width="900" ; height="400"></canvas>
                         </div>
                     </div>
                     <div id="grafico3G" style="text-align: center;">
-                        <!-- <button><img src="https://cdn-icons-png.flaticon.com/512/5312/5312138.png" alt=""></button> -->
-                        <div class="titulo2">
-                            <button><img src="https://cdn-icons-png.flaticon.com/512/17/17699.png" alt=""></button>
-                        <h3>Métricas na Sala 3 - Sala da história dos sobrenomes</h3>
-                    </div>
+                        <h3 style="margin-top: 0%;">Métricas na Sala 3 - Sala da história dos sobrenomes</h3>
                         <div class="graficoG">
                             <canvas id="graficoSala3G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
+                    </div>
 
+                    <div id="grafico5G" style="text-align: center;">
+                        <h3 style="margin-top: 0%;">Métricas na Sala 5 - Sala de Figuras Importantes no Brasil (Sensor 2)</h3>
+                        <div class="graficoG">
+                            <canvas id="graficoSala5G" position="relative" width="3300" ; height="900"></canvas>
+                        </div>
                     </div>
                 </div>
 
@@ -193,6 +195,57 @@
         options: {}
     };
 
+    // grafico da sala 5G do museu
+
+    const labels5G = [
+        '00:00',
+        '01:00',
+        '02:00',
+        '03:00',
+        '04:00',
+        '05:00',
+        '06:00',
+        '07:00',
+        '08:00',
+        '09:00',
+        '10:00',
+        '11:00',
+        '12:00',
+        '13:00',
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
+    ];
+
+    const data5G = {
+        labels: labels3G,
+        datasets: [{
+            label: 'Temperatura (°C)',
+            backgroundColor: '#B62727',
+            borderColor: '#B62727',
+            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+        },
+        {
+            label: 'Umidade (%)',
+            backgroundColor: '#ff8800',
+            borderColor: '#ff8800',
+            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+        }
+        ]
+    };
+    const config5G = {
+        type: 'line',
+        data: data5G,
+        options: {}
+    };
+
 
 
     const myChart = new Chart(
@@ -205,14 +258,27 @@
         config3G
     );
 
+    const myChart5G = new Chart(
+        document.getElementById('graficoSala5G'),
+        config5G
+    );
+
     dadosGraficos.style.display = 'block';
     grafico3G.style.display = 'none';
+    grafico5G.style.display = 'none';
 
 
     function mudar3G() {
         grafico.style.display = 'none';
         listatu.style.display = 'none';
         grafico3G.style.display = 'block';
+    }
+
+    function mudar5G() {
+        grafico.style.display = 'none';
+        listatu.style.display = 'none';
+        grafico3G.style.display = 'none';
+        grafico5G.style.display = 'block';
     }
 </script>
 
