--- a/Telas da Dashboard/tela-info2.html
+++ b/Telas da Dashboard/tela-info2.html
@@ -114,6 +114,22 @@
                             <canvas id="graficoSala5G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
                     </div>
+
+                    <div id="grafico6G" style="text-align: center;">
+                        <h3 style="margin-top: 0%;">Métricas na Sala 6 - Sala da história da música
+                            Brasileira</h3>
+                        <div class="graficoG">
+                            <canvas id="graficoSala6G" position="relative" width="3300" ; height="900"></canvas>
+                        </div>
+                    </div>
+
+                    <div id="grafico9G" style="text-align: center;">
+                        <h3 style="margin-top: 0%;">Métricas na Sala 9 - Sala de documentação da TV
+                            Brasileira</h3>
+                        <div class="graficoG">
+                            <canvas id="graficoSala9G" position="relative" width="3300" ; height="900"></canvas>
+                        </div>
+                    </div>
                 </div>
 
 
@@ -225,7 +241,7 @@
     ];
 
     const data5G = {
-        labels: labels3G,
+        labels: labels5G,
         datasets: [{
             label: 'Temperatura (°C)',
             backgroundColor: '#B62727',
@@ -246,6 +262,109 @@
         options: {}
     };
 
+    // grafico da sala 6G do museu
+
+    const labels6G = [
+        '00:00',
+        '01:00',
+        '02:00',
+        '03:00',
+        '04:00',
+        '05:00',
+        '06:00',
+        '07:00',
+        '08:00',
+        '09:00',
+        '10:00',
+        '11:00',
+        '12:00',
+        '13:00',
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
+    ];
+
+    const data6G = {
+        labels: labels6G,
+        datasets: [{
+            label: 'Temperatura (°C)',
+            backgroundColor: '#B62727',
+            borderColor: '#B62727',
+            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+        },
+        {
+            label: 'Umidade (%)',
+            backgroundColor: '#ff8800',
+            borderColor: '#ff8800',
+            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+        }
+        ]
+    };
+    const config6G = {
+        type: 'line',
+        data: data6G,
+        options: {}
+    };
+
+    // grafico da sala 9G do museu
+
+    const labels9G = [
+        '00:00',
+        '01:00',
+        '02:00',
+        '03:00',
+        '04:00',
+        '05:00',
+        '06:00',
+        '07:00',
+        '08:00',
+        '09:00',
+        '10:00',
+        '11:00',
+        '12:00',
+        '13:00',
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
+    ];
+
+    const data9G = {
+        labels: labels9G,
+        datasets: [{
+            label: 'Temperatura (°C)',
+            backgroundColor: '#B62727',
+            borderColor: '#B62727',
+            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+        },
+        {
+            label: 'Umidade (%)',
+            backgroundColor: '#ff8800',
+            borderColor: '#ff8800',
+            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+        }
+        ]
+    };
+    const config9G = {
+        type: 'line',
+        data: data9G,
+        options: {}
+    };
+
+
 
 
     const myChart = new Chart(
@@ -263,9 +382,21 @@
         config5G
     );
 
+    const myChart6G = new Chart(
+        document.getElementById('graficoSala6G'),
+        config6G
+    );
+
+    const myChart9G = new Chart(
+        document.getElementById('graficoSala9G'),
+        config9G
+    );
+
     dadosGraficos.style.display = 'block';
     grafico3G.style.display = 'none';
     grafico5G.style.display = 'none';
+    grafico6G.style.display = 'none';
+    grafico9G.style.display = 'none';
 
 
     function mudar3G() {
@@ -279,6 +410,23 @@
         listatu.style.display = 'none';
         grafico3G.style.display = 'none';
         grafico5G.style.display = 'block';
+    }
+
+    function mudar6G() {
+        grafico.style.display = 'none';
+        listatu.style.display = 'none';
+        grafico3G.style.display = 'none';
+        grafico5G.style.display = 'none';
+        grafico6G.style.display = 'block';
+    }
+
+    function mudar9G() {
+        grafico.style.display = 'none';
+        listatu.style.display = 'none';
+        grafico3G.style.display = 'none';
+        grafico5G.style.display = 'none';
+        grafico6G.style.display = 'none';
+        grafico9G.style.display = 'block';
     }
 </script>
 
