site e dashboard finalizados

--- a/Site Completo/HDP-site/tela-info1.html
+++ b/Site Completo/HDP-site/tela-info1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informações Dashboard | HDP</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style-Inicial.css">
+    <link rel="stylesheet" href="style-dashboard.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="blocoNavbar">
                 <ul class="navbar">
-                    <li>Inicío</li>
-                    <li>Sobre nós</li>
+                    <a href="siteHDP.html"><li>Home</li></a>
+                    <a href="siteHDP.html #sobreNos"><li>Sobre nós</li></a>
                     <li>|</li>
                     <li style="color: rgb(221, 148, 13);">Dashboard</li>
                     </a>
@@ -40,7 +40,7 @@
                     <p>fernando.brandao@sptech.school</p>
                 </div>
                 <div class="acesso">
-                    <h3>HOME</h>
+                    <a href="siteHDP.html" style="color: #ffffff;"><h3>HOME</h></a>
                         <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
                 </div>
             </div>
