--- a/Site Completo/HDP-site/tela-info2.html
+++ b/Site Completo/HDP-site/tela-info2.html
@@ -88,9 +88,9 @@
                             <button style="color: red;" onclick="mudar6G()"><b style="color: black;">6 - </b> Sala da
                                 história da música
                                 Brasileira</button>
-                            <button style="color: red;" onclick="mudar9G()"><b style="color: black;">9 - </b> Sala de
-                                documentação da TV
-                                Brasileira</button>
+                            <button style="color: red;" onclick="mudar8G()"><b style="color: black;">8 - </b> Sala de exposição de documentos
+                                de
+                                arte</button>
                         </div>
                     </div>
                     <div class="linha"></div>
@@ -124,11 +124,11 @@
                         </div>
                     </div>
 
-                    <div id="grafico9G" style="text-align: center;">
-                        <h3 style="margin-top: 0%;">Métricas na Sala 9 - Sala de documentação da TV
-                            Brasileira</h3>
+                    <div id="grafico8G" style="text-align: center;">
+                        <h3 style="margin-top: 0%;">Métricas na Sala 8 - Sala de exposição de documentos de
+                            arte</h3>
                         <div class="graficoG">
-                            <canvas id="graficoSala9G" position="relative" width="3300" ; height="900"></canvas>
+                            <canvas id="graficoSala8G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
                     </div>
                 </div>
@@ -164,6 +164,16 @@
     // grafico da sala 3G do museu
 
     const labels3G = [
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
         '00:00',
         '01:00',
         '02:00',
@@ -178,16 +188,6 @@
         '11:00',
         '12:00',
         '13:00',
-        '14:00',
-        '15:00',
-        '16:00',
-        '17:00',
-        '18:00',
-        '19:00',
-        '20:00',
-        '21:00',
-        '22:00',
-        '23:00',
     ];
 
     const data3G = {
@@ -196,13 +196,13 @@
             label: 'Temperatura (°C)',
             backgroundColor: '#B62727',
             borderColor: '#B62727',
-            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+            data: [24, 26, 25, 25, 26, 25, 24, 23, 23, 21, 17, 18, 16, 18, 20, 21, 22, 24, 24, 28, 33, 35, 33, 34],
         },
         {
             label: 'Umidade (%)',
             backgroundColor: '#ff8800',
             borderColor: '#ff8800',
-            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+            data: [55, 53, 53, 54, 52, 51, 50, 49, 49, 48, 52, 54, 53, 53, 54, 56, 57, 58, 65, 67, 68, 65, 66, 65],
         }
         ]
     };
@@ -215,6 +215,16 @@
     // grafico da sala 5G do museu
 
     const labels5G = [
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
         '00:00',
         '01:00',
         '02:00',
@@ -229,16 +239,7 @@
         '11:00',
         '12:00',
         '13:00',
-        '14:00',
-        '15:00',
-        '16:00',
-        '17:00',
-        '18:00',
-        '19:00',
-        '20:00',
-        '21:00',
-        '22:00',
-        '23:00',
+    
     ];
 
     const data5G = {
@@ -247,13 +248,13 @@
             label: 'Temperatura (°C)',
             backgroundColor: '#B62727',
             borderColor: '#B62727',
-            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+            data: [26, 24, 25, 25, 26, 25, 22, 19, 14, 13, 11, 11, 13, 12, 15, 18, 22, 24, 24, 25, 25, 25, 24, 24],
         },
         {
             label: 'Umidade (%)',
             backgroundColor: '#ff8800',
             borderColor: '#ff8800',
-            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+            data: [55, 53, 53, 54, 52, 51, 50, 43, 40, 41, 38, 36, 36, 35, 40, 49, 51, 51, 53, 52, 52, 51, 50, 50],
         }
         ]
     };
@@ -266,6 +267,16 @@
     // grafico da sala 6G do museu
 
     const labels6G = [
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
         '00:00',
         '01:00',
         '02:00',
@@ -280,16 +291,6 @@
         '11:00',
         '12:00',
         '13:00',
-        '14:00',
-        '15:00',
-        '16:00',
-        '17:00',
-        '18:00',
-        '19:00',
-        '20:00',
-        '21:00',
-        '22:00',
-        '23:00',
     ];
 
     const data6G = {
@@ -298,13 +299,13 @@
             label: 'Temperatura (°C)',
             backgroundColor: '#B62727',
             borderColor: '#B62727',
-            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+            data: [26, 24, 25, 25, 26, 25, 22, 19, 19, 20, 18, 18, 17, 16, 17, 18, 17, 14, 14, 13, 11, 11, 10, 12],
         },
         {
             label: 'Umidade (%)',
             backgroundColor: '#ff8800',
             borderColor: '#ff8800',
-            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+            data: [55, 53, 53, 54, 52, 51, 50, 50, 50, 51, 53, 55, 56, 55, 53, 49, 46, 40, 40, 39, 40, 42, 42, 44],
         }
         ]
     };
@@ -314,9 +315,19 @@
         options: {}
     };
 
-    // grafico da sala 9G do museu
+    // grafico da sala 8G do museu
 
-    const labels9G = [
+    const labels8G = [
+        '14:00',
+        '15:00',
+        '16:00',
+        '17:00',
+        '18:00',
+        '19:00',
+        '20:00',
+        '21:00',
+        '22:00',
+        '23:00',
         '00:00',
         '01:00',
         '02:00',
@@ -331,37 +342,27 @@
         '11:00',
         '12:00',
         '13:00',
-        '14:00',
-        '15:00',
-        '16:00',
-        '17:00',
-        '18:00',
-        '19:00',
-        '20:00',
-        '21:00',
-        '22:00',
-        '23:00',
     ];
 
-    const data9G = {
-        labels: labels9G,
+    const data8G = {
+        labels: labels8G,
         datasets: [{
             label: 'Temperatura (°C)',
             backgroundColor: '#B62727',
             borderColor: '#B62727',
-            data: [15, 16, 15, 15, 17, 17, 18, 16, 18, 20, 21, 22, 28, 32, 34, 33, 35, 33, 34],
+            data: [36, 34, 35, 35, 36, 29, 26, 25, 24, 24, 25, 23, 22, 22, 20, 21, 22, 24, 24, 25, 24, 30, 28, 28],
         },
         {
             label: 'Umidade (%)',
             backgroundColor: '#ff8800',
             borderColor: '#ff8800',
-            data: [56, 57, 62, 65, 67, 68, 65, 66, 65],
+            data: [57, 58, 58, 60, 62, 58, 50, 46, 48, 48, 50, 49, 49, 45, 46, 49, 51, 49, 50, 52, 52, 51, 53, 52],
         }
         ]
     };
-    const config9G = {
+    const config8G = {
         type: 'line',
-        data: data9G,
+        data: data8G,
         options: {}
     };
 
@@ -388,16 +389,16 @@
         config6G
     );
 
-    const myChart9G = new Chart(
-        document.getElementById('graficoSala9G'),
-        config9G
+    const myChart8G = new Chart(
+        document.getElementById('graficoSala8G'),
+        config8G
     );
 
     dadosGraficos.style.display = 'block';
     grafico3G.style.display = 'none';
     grafico5G.style.display = 'none';
     grafico6G.style.display = 'none';
-    grafico9G.style.display = 'none';
+    grafico8G.style.display = 'none';
     voltar.style.display = 'none';
 
 
@@ -428,13 +429,13 @@
 
     }
 
-    function mudar9G() {
+    function mudar8G() {
         grafico.style.display = 'none';
         listatu.style.display = 'none';
         grafico3G.style.display = 'none';
         grafico5G.style.display = 'none';
         grafico6G.style.display = 'none';
-        grafico9G.style.display = 'block';
+        grafico8G.style.display = 'block';
         voltar.style.display = 'block';
     }
 
@@ -445,7 +446,7 @@
     grafico3G.style.display = 'none';
     grafico5G.style.display = 'none';
     grafico6G.style.display = 'none';
-    grafico9G.style.display = 'none';
+    grafico8G.style.display = 'none';
     voltar.style.display = 'none';
     }
 </script>
